[project]
name = "my-openv"
version = "0.1.0"
description = "Simple financial RL environment"
authors = [
    { name="Harshal Gupta", email="guptaharshal1515@gmail.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
